peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/Miscellaneous_Billable_Item__c.object-meta.xml
<CustomObject>
    <label>Miscellaneous Billable Item</label>
    <nameField>
        <displayFormat>MB-{0}</displayFormat>
        <label>Miscellaneous Billable Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Miscellaneous Billable Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>