peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>