peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/Future_Bill_Misc_Type__c.field-meta.xml
<CustomField>
    <fullName>Future_Bill_Misc_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Bill Misc Type</label>
    <type>Checkbox</type>
</CustomField>