peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/Generated_Code__c.field-meta.xml
<CustomField>
    <fullName>Generated_Code__c</fullName>
    <description>SAL-5293</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Generated Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>