peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/Included_in_Rental__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included in Rental?</label>
    <type>Checkbox</type>
</CustomField>