peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/Last_Tax_Calculation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Last_Tax_Calculation_Complete__c</fullName>
    <formula>Opportunity__r.Last_Tax_Calculation_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Tax Calculation Complete</label>
    <type>DateTime</type>
</CustomField>