peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/Last_Tax_Calculation_Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Last_Tax_Calculation_Error_Details__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Tax Calculation Error Details</label>
    <type>Text</type>
</CustomField>