peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/Misc_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Misc_Amount_Type__c</fullName>
    <label>Misc Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>Amount</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Rental %</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Variable Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>