peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/Misc_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Misc_Item_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Misc Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>