peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/Misc_Tax__c.field-meta.xml
<CustomField>
    <fullName>Misc_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable?</label>
    <type>Checkbox</type>
</CustomField>