peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <inlineHelpText>Opportunity related to this Misc Billable</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Misc Billables</relationshipLabel>
    <relationshipName>Miscellaneous_Billable_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>