peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/PassThrough__c.field-meta.xml
<CustomField>
    <fullName>PassThrough__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PassThrough</label>
    <type>Checkbox</type>
</CustomField>