peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaymentType</label>
    <type>Checkbox</type>
</CustomField>