peac_dev/force-app/main/default/objects/Miscellaneous_Billable_Item__c/validationRules/Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   !ISBLANK(Opportunity__c),
   Opportunity__r.IsClosed
)</errorConditionFormula>
    <errorMessage>Misc Billables may not be edited when the related opportunity is in a closed stage.</errorMessage>
</ValidationRule>